new module kb-importer